K8S/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: melone30/todo-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort # Expose le service sur un port spécifique
  ports:
    - port: 3000 # Le port interne de l'application Next.js
      targetPort: 3000 # Le même port utilisé dans le container
      protocol: TCP
  selector:
    app: todo-app # Sélectionner les pods avec le label "app: todo-app"
