K8S/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-server
  template:
    metadata:
      labels:
        app: json-server
    spec:
      containers:
        - name: json-server
          image: melone30/json-server:latest
          ports:
            - containerPort: 3001
          volumeMounts:
            - mountPath: /data/db
              name: db-volume
      volumes:
        - name: db-volume
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: json-server-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: json-server
