K8S/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /nextjs
            pathType: Prefix
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3000
          - path: /json-server
            pathType: Prefix
            backend:
              service:
                name: json-server-service
                port:
                  number: 3001
